--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "lesson20",
+  "name": "lesson21",
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://dmytro1117.github.io/react-course/",
   "scripts": {
     "start": "vite --open",
     "build": "vite build",
@@ -12,16 +11,17 @@
     "deploy": "vite build && gh-pages -d dist"
   },
   "dependencies": {
+    "@redux-devtools/extension": "^3.2.6",
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.1",
+    "clsx": "1.2.1",
+    "nanoid": "4.0.0",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hot-toast": "2.4.0",
     "react-icons": "4.4.0",
     "react-redux": "^8.1.3",
-    "react-router-dom": "^6.13.0-pre.1",
-    "redux-persist": "^6.0.0"
+    "react-router-dom": "^6.13.0-pre.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
